--- a/src/pages/locations.css
+++ b/src/pages/locations.css
@@ -1,4 +1,27 @@
 .locations{
-    padding-top: 10vh;
     min-height: 90vh !important;
+}
+
+.locations-parallax {
+    /* The image used */
+    background: url('https://i.imgur.com/hnnb2Xx.png');
+  
+    /* Set a specific height */
+    min-height: 85vh; 
+  
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.google-map iframe{
+    width: 100vw !important;
+    height: 50vh !important;
+    margin-bottom: 0px;
 }
