--- a/src/pages/about-us.css
+++ b/src/pages/about-us.css
@@ -34,7 +34,7 @@
 
 .about-us-container{
     padding: 20vh !important;
-    background: url('https://ih0.redbubble.net/image.716014828.9198/flat,1000x1000,075,f.u1.jpg');
+    background: url('https://imgur.com/6VA3RdR.jpg');
     background-repeat: no-repeat;
     background-size: cover;
 }
