--- a/src/pages/contact.css
+++ b/src/pages/contact.css
@@ -1,4 +1,53 @@
-.contact{
-    padding-top: 10vh;
-    min-height: 90vh !important;
+.contact-container{
+    padding: 10vh;
+    background: url('https://imgur.com/5Vxrt5J.jpg');
+
+    background-position: center;
+    /* background-repeat: no-repeat; */
+
+}
+
+.contact-parallax {
+    /* The image used */
+    background: url('https://i.imgur.com/wCPniPt.png');
+  
+    /* Set a specific height */
+    min-height: 85vh; 
+  
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+div.six.wide.field{
+    margin: auto !important;
+    padding-bottom: 4vh;
+}
+
+.gdpr-check{
+    padding: 4vh !important;
+    width: 100%;
+    text-align: center;
+}
+
+.gdpr-check label{
+    width: 20%;
+    margin: 0 auto;
+}
+
+.submit-btn{
+    text-align: center;
+}
+
+.ui.message{
+    width: 40% !important;
+    margin: auto !important;
+    margin-top: 4vh !important;
+    text-align: center;
 }
