--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -6,6 +6,9 @@ html, body{
    
 }
 
-.carousel{
-    height: 100vh !important;
+@media only screen and (min-width: 600px){
+    .carousel{
+        height: 100vh !important;
+    }
 }
+
