--- a/src/pages/feed.css
+++ b/src/pages/feed.css
@@ -1,4 +1,5 @@
 .feed{
+    padding-top: 5vh;
     background-color: #492723;
     background-image: linear-gradient(90deg, transparent 50%,
     #e5dbc4 50%);
