--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -12,3 +12,9 @@ html, body{
     }
 }
 
+@media only screen and (max-width: 600px){
+    .carousel-container{
+        padding-top: 100px;
+    }
+}
+
